[gd_scene load_steps=4 format=2]

[ext_resource path="res://objects/radar/WeaponIndicator.tscn" type="PackedScene" id=1]
[ext_resource path="res://objects/radar/WeaponSystem.gd" type="Script" id=2]
[ext_resource path="res://fonts/computer.tres" type="DynamicFont" id=3]

[node name="WeaponSystem" type="Control"]
use_parent_material = true
margin_top = 68.0
margin_right = 48.0
margin_bottom = 68.0
rect_min_size = Vector2( 48, 60 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Weapons" type="VBoxContainer" parent="."]
use_parent_material = true
margin_right = 48.0
margin_bottom = 52.0
custom_constants/separation = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WeaponIndicator1" parent="Weapons" instance=ExtResource( 1 )]

[node name="WeaponIndicator2" parent="Weapons" instance=ExtResource( 1 )]
margin_top = 34.0
margin_bottom = 60.0

[node name="Label_NoPower" type="Label" parent="."]
visible = false
use_parent_material = true
margin_left = -16.0
margin_top = 20.0
margin_right = 64.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_constants/line_spacing = -3
text = "WEAPONS
OFFLINE"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
